<resources>
    <string name="app_name">GetApp</string>
    <string name="title_activity_timer">TimerActivity</string>
    <string name="start_txt">Start</string>
    <string name="edit_txt_hint">Minutes</string>
    <string name="set_time_txt">Set Time</string>
    <string name="default_time">05:00</string>
    <string name="done_msg">Well Done!</string>
    <string name="repeat_txt">repeat exercise</string>
    <string name="other_training_txt">other exercise</string>
    <string name="other_muscle_txt">other muscle</string>

</resources>
