<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimerActivity">

    <EditText
        android:id="@+id/time_input"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:hint="Minutes"
        android:maxLength="4"
        android:inputType="number"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/time_txt"
        />

    <Button
        android:id="@+id/set_time_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/time_input"
        android:layout_toEndOf="@id/time_input"
        android:text="@string/set_time_txt"/>

    <TextView
        android:id="@+id/time_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_time"
        android:textSize="60sp"
        android:textColor="@android:color/black"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/start_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_txt"
        android:layout_below="@+id/time_txt"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>